Light and dark mode almost fixed, added timeRemaining

--- a/src/App.css
+++ b/src/App.css
@@ -45,20 +45,15 @@
 
 body {
   background: #553D67;
-  color: var(--color-text-primary);
+  color: black;
   transition: background 0.25s ease-in-out;
-}
-
-/* light mode */
-body[data-theme="true"] {
-  --color-text-primary: #black;
-  --color-bg-primary: #fff;
 }
 
 /* dark mode */
 body[data-theme="false"] {
-  --color-text-primary: #fff;
-  --color-bg-primary: #2B2A33;
+  background: #2B2A33 !important;
+  color: #fff !important;
+  transition: background 0.25s ease-in-out;
 }
 /* *************************************** */
 /* student dashboard things */
