--- a/src/techSupportPage/TechSupportPageStyles.css
+++ b/src/techSupportPage/TechSupportPageStyles.css
@@ -92,3 +92,7 @@ button:active {
     padding: 10px;
     font-size: 16px;
 }
+
+.whitespace{
+    height: 100px;
+}
